# rats-search

./: CHANGELOG.md  CMakeLists.txt
src/: activitywidget.cpp  activitywidget.h  favoriteswidget.cpp  favoriteswidget.h  feedwidget.cpp  feedwidget.h  mainwindow.cpp  mainwindow.h  manticoremanager.cpp  manticoremanager.h  toptorrentswidget.cpp  toptorrentswidget.h  torrentexporter.cpp  torrentexporter.h
